# ngs-opnsense

./: .gitignore  LICENSE  README.md  __init__.py  helpers.py  pyproject.toml  validators.py
Api/CoreAPI/: __init__.py
Api/CoreAPI/Firewall/: __init__.py
Api/CoreAPI/Firewall/Alias/: __init__.py  model.py
Api/CoreAPI/Firewall/Alias/model/: __init__.py  regions.py
docs/: core.md
docs/core/: firewall.md
docs/core/firewall/alias/: aliasController.md
tests/CoreApi/Firewall/Alias/: test_alias.py
